--- a/ToDO List/signUp/signUp.html
+++ b/ToDO List/signUp/signUp.html
@@ -16,6 +16,7 @@
             <input id="password" type="password" name="password">
             <button id="signUp" type="submit">Sign Up</button>
         </form>
+        <a href="../index.html">LogIn</a>
     </div>
 </body>
     <script src="./signUp.js"></script>
