--- a/ToDO List/todList/todolist.html
+++ b/ToDO List/todList/todolist.html
@@ -21,8 +21,8 @@
             <input id="item" type="text" placeholder="Enter the tasks">
             <button id="button">Submit</button>
         </div>
+        <Button id="signOut">Sign Out</Button>
     </div>
     <script src="./todo.js"></script>
 </body>
-
 </html>
