--- a/ToDO List/frontend/signUp/signUp.html
+++ b/ToDO List/frontend/signUp/signUp.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Sign Up</title>
 </head>
 
 <body>
     <div class="signUP_Container">
-        <h1>Login Page</h1>
         <form>
+            <input id="name" type="text" name="name">
             <input id="email" type="email" name="email">
             <input id="password" type="password" name="password">
-            <button id="login" type="submit">Login</button>
+            <button id="signUp" type="submit">Sign Up</button>
         </form>
-        <a href="./signUp/signUp.html">Sign Up</a>
+        <a href="/">LogIn</a>
     </div>
 </body>
-    <script src="./script.js"></script>
+    <script src="./signUp.js"></script>
 </html>
