created completed task functionality

--- a/ToDO List/frontend/index.html
+++ b/ToDO List/frontend/index.html
@@ -11,12 +11,12 @@
 <body>
     <div class="signUP_Container">
         <h1>Login Page</h1>
-        <form>
+        <form method="POST">
             <input id="email" type="email" name="email">
             <input id="password" type="password" name="password">
             <button id="login" type="submit">Login</button>
         </form>
-        <a href="/signUp">Sign Up</a>
+        <a href="./signUp/signUp.html">Sign Up</a>
     </div>
 </body>
     <script src="./script.js"></script>
