--- a/ToDO List/frontend/signUp/signUp.html
+++ b/ToDO List/frontend/signUp/signUp.html
@@ -5,18 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./signUp.css">
     <title>Sign Up</title>
 </head>
 
 <body>
     <div class="signUP_Container">
-        <form>
+        <form method="post">
             <input id="name" type="text" name="name">
             <input id="email" type="email" name="email">
             <input id="password" type="password" name="password">
             <button id="signUp" type="submit">Sign Up</button>
         </form>
-        <a href="/">LogIn</a>
+        <a href="../index.html">LogIn</a>
     </div>
 </body>
     <script src="./signUp.js"></script>
