--- a/ToDO List/frontend/todList/todolist.html
+++ b/ToDO List/frontend/todList/todolist.html
@@ -17,6 +17,10 @@
 
             </ul>
         </div>
+        <h4>Completed Tasks</h4>
+        <div class="completedTask">
+            <ul id="cmp_taskList"></ul>
+        </div>
         <div class="input">
             <input id="item" type="text" placeholder="Enter the tasks">
             <button id="button">Submit</button>
